# relational-AI

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  alembic.ini  docker-compose.yml  locust.pyi  pyproject.toml
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml
alembic/: env.py
alembic/versions/: 20260312_0001_create_scenario_schema.py  20260312_0002_add_operator_auth_and_audit.py  20260312_0003_add_persistent_workflow_tables.py  20260313_0004_add_case_evidence_snapshot.py
backend/: Dockerfile
docs/: architecture.md  openapi.json  workflows.md
docs/sample_data/: sample_transactions.csv
frontend/: Dockerfile  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.tsbuildinfo  vitest.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/styles/: base.css  components.css  responsive.css  tokens.css  views.css
frontend/components/: analyze-view.tsx  charts.tsx  dashboard-sections.tsx  dashboard.test.tsx  dashboard.tsx  investigate-view.tsx  sidebar.tsx  skeletons.tsx
frontend/e2e/: auth.spec.ts  dashboard.spec.ts  fixtures.ts  investigation.spec.ts  smoke.spec.ts
frontend/lib/: api.ts  contracts.gen.ts  contracts.ts  use-dashboard-state.test.ts  use-dashboard-state.ts
frontend/test/: setup.ts
scripts/: export_openapi.py
src/relational_fraud_intelligence/: __init__.py  __main__.py  app.py  bootstrap.py  manage.py  settings.py
src/relational_fraud_intelligence/api/: _helpers.py  alert_routes.py  auth_routes.py  case_routes.py  dashboard_routes.py  dataset_routes.py  dependencies.py  errors.py  health_routes.py  investigation_routes.py  routes.py
src/relational_fraud_intelligence/api/middleware/: audit.py  request_context.py  security_headers.py
src/relational_fraud_intelligence/application/dto/: alerts.py  auth.py  cases.py  dashboard.py  explanations.py  investigation.py  routes.py
src/relational_fraud_intelligence/application/ports/: explanations.py  reasoner.py  repositories.py  security.py  text_signals.py
src/relational_fraud_intelligence/application/services/: alert_service.py  audit_service.py  auth_service.py  case_assembler.py  case_service.py  dashboard_service.py  dataset_service.py  investigation_service.py  scenario_catalog_service.py  scenario_overview_factory.py  workspace_guide_service.py
src/relational_fraud_intelligence/domain/: alert.py  base.py  case.py  dashboard.py  dataset.py  entity.py  enums.py  investigation.py  models.py  operator.py  scenario.py  transaction.py  workspace.py
src/relational_fraud_intelligence/infrastructure/: logging.py  observability.py
src/relational_fraud_intelligence/infrastructure/analysis/: behavioral.py  benford.py  outliers.py  round_amounts.py  velocity.py
src/relational_fraud_intelligence/infrastructure/config/: demo_data.py
src/relational_fraud_intelligence/infrastructure/explanations/: __init__.py  deterministic_analysis_explanation_service.py  fallback_analysis_explanation_service.py  huggingface_analysis_explanation_service.py
src/relational_fraud_intelligence/infrastructure/graph/: analyzer.py
src/relational_fraud_intelligence/infrastructure/persistence/: __init__.py  mappers.py  models.py  repository.py  security_repository.py  seed.py  session.py  workflow_repository.py
src/relational_fraud_intelligence/infrastructure/rate_limit/: memory.py  redis_backend.py
src/relational_fraud_intelligence/infrastructure/reasoners/: fallback_reasoner.py  local_risk_reasoner.py  relationalai_reasoner.py  relationalai_sdk.py  relationalai_semantic_model.py
src/relational_fraud_intelligence/infrastructure/repositories/: demo_repository.py  memory.py
src/relational_fraud_intelligence/infrastructure/security/: bootstrap.py  passwords.py  tokens.py
src/relational_fraud_intelligence/infrastructure/seed/: __init__.py  sample_dataset.py  scenarios.py
src/relational_fraud_intelligence/infrastructure/text/: fallback_text_signal_service.py  huggingface_text_signal_service.py  keyword_text_signal_service.py
tests/: conftest.py  test_alert_service.py  test_analysis_explanations.py  test_api.py  test_audit_service.py  test_auth_service.py  test_benford.py  test_case_service.py  test_dashboard_service.py  test_dataset_service.py  test_fallback_services.py  test_fraud_rules.py  test_graph_analyzer.py  test_investigation_service.py  test_keyword_text_signal_service.py  test_manage.py  test_postgres_integration.py  test_rate_limiter.py  test_relationalai_reasoner.py  test_repository.py  test_runtime_support.py  test_session.py  test_settings.py  test_workflow_repository.py
tests/loadtest/: locustfile.py
